# kul

./: Cargo.toml  README.md  TODO
core/: Cargo.toml  README.md
core/examples/: stack_only.rs
core/src/: combiner.rs  datum.rs  error.rs  lib-lints.rs  lib.rs  parser.rs  text.rs
core/src/datum/premade/: mutref.rs
core/src/parser/premade/: default_classifier.rs  empty_bindings.rs  pair_bindings.rs  slice_alloc.rs
core/src/premade/: inmem.rs
core/src/text/: iter.rs
core/src/text/chunk/premade/: pos_str.rs
core/src/text/iter/: chunks.rs
core/src/text/premade/: datum_list.rs
core/tests/: mutref_stack_alloc.rs  pair_bindings.rs  refcell_stack_alloc.rs
examples/: common_basic.rs  non_default_delimiters.rs
lints/: Cargo.toml
lints/src/: lib.rs
shared_tests/: Cargo.toml
shared_tests/src/: bindings.rs  lib-lints.rs  lib.rs  suites.rs  utils.rs
shared_tests/src/utils/: tree_shapes.rs
src/: datum.rs  drop.rs  lib-lints.rs  lib.rs  top.rs
src/common/: helper.rs  inmem.rs  stream.rs
src/parser/: arc_alloc.rs  box_alloc.rs  hashmap_bindings.rs  rc_alloc.rs
src/source_stream/: char_iter_src_strm.rs  strish_iter_src_strm.rs
src/text/: vec.rs
src/text/chunk/: pos_strish.rs
tests/: arc_alloc.rs  box_alloc.rs  common_inmem.rs  common_stream.rs  hashmap_bindings.rs  rc_alloc.rs  stream_char_source.rs  stream_strish_source.rs
