[package]
name = "kul"
version = "0.1.2"
authors = ["Derick Eddington"]
edition = "2018"
description = "Parser for a unique textual notation that can be used as both a data format and a markup language and that has powerful extensibility of both lexical syntax and semantics. Inspired by the little-known Curl programming language. Has no unsafe code and has no external dependencies. This is the full crate that builds on and re-exports the core crate and that uses the std library."
keywords = ["parser", "data-format", "markup", "text-macros", "safe"]
categories = ["parser-implementations", "text-processing"]
license = "Unlicense"
repository = "https://github.com/DerickEddington/kul"
readme = "README.md"

[workspace]

[dependencies]
kul_core = { path = "core", version = "0.1.2" }

[dev-dependencies]
kul_shared_tests = { path = "shared_tests" }
