[package]
name = "kul_core"
version = "0.1.0"
authors = ["Derick Eddington"]
edition = "2018"
description = "Parser for a unique textual notation that can be used as both a data format and/or a markup language and that allows powerful extensibility of both syntax and semantics. Inspired by the little-known Curl programming language. Has no unsafe code and has no external dependencies. This is the core crate that is no_std and does not use heap allocation."
keywords = ["parser", "data-format", "markup", "text-macros", "no_std"]
categories = ["parser-implementations", "text-processing", "no-std"]
# repository = "TODO"
publish = false

[dev-dependencies]
kul_shared_tests = { path = "../shared_tests" }
