[package]
name = "kul_core"
version = "0.1.3"
authors = ["Derick Eddington"]
edition = "2018"
description = "Parser for a unique textual notation that can be used as both a data format and a markup language and that has powerful extensibility of both lexical syntax and semantics. Inspired by the little-known Curl programming language. Has no unsafe code and has no external dependencies. This is the core crate that is no_std and does not use heap allocation."
keywords = ["parser", "data-format", "markup", "text-macros", "no_std"]
categories = ["parser-implementations", "text-processing", "no-std"]
license = "Unlicense"
repository = "https://github.com/DerickEddington/kul"
readme = "README.md"

[lib]
path = "src/lib-lints.rs"

[dependencies]
kul_lints = { path = "../lints", version = "0.1.3" }

[dev-dependencies]
kul_shared_tests = { path = "../shared_tests" }
