[package]
name = "kul_shared_tests"
version = "0.1.1"
authors = ["Derick Eddington"]
edition = "2018"
description = "Test suites and utilities for testing both the core and the full crates."
license = "Unlicense"
repository = "https://github.com/DerickEddington/kul"

[dependencies]
kul_core = { path = "../core" }
kul = { path = ".." }
